afinacion de funciones, adicion de nuevo forma de programar viaje